# pizza-ninja-aux

./: README.md
pizza-ninja-aux/: CMakeLists.txt  package.xml
pizzaninja-controllers/: CMakeLists.txt  README.md  package.xml
pizzaninja-controllers/controller_specs/: pr2_point2point_control.yaml  pr2_seg_follow_control.yaml
pizzaninja-controllers/launch/: pr2_left_segfollow.launch
pizzaninja-controllers/src/pizzaninja-controllers/: pr2_point2point.cpp  pr2_segfollower.cpp  pr2_seggoalcontroller.cpp
pizzaninja_msgs/: CMakeLists.txt  package.xml
pizzaninja_msgs/msg/: SegGoal.msg
