<?xml version="1.0"?>
<package format="2">
  <name>pizzaninja-controllers</name>
  <version>0.1.0</version>
  <description>.</description>

  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml-cpp</depend>
  <depend>giskard</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>geometry_msgs</depend>
  <depend>pizzaninja_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kdl_conversions</depend>
</package>
